--- a/test/server/public/content3.html
+++ b/test/server/public/content3.html
@@ -5,11 +5,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
     <body>
-        <img src="/public/1.jpg" />
-        <img src="/public/2.jpg" />
-        <img src="/public/3.jpg" />
-        <img src="/public/4.png" />
-        <img src="/public/5.png" />
+        <img src="/public/1.jpg" style="max-width: 300px" />
+        <img src="/public/2.jpg" style="max-width: 300px" />
+        <img src="/public/3.jpg" style="max-width: 300px" />
+        <img src="/public/4.png" style="max-width: 300px" />
+        <img src="/public/5.png" style="max-width: 300px" />
         <pre>
 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5 6 7 8 9 10
 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5 6 7 8 9 10
